--- a/docroot/themes/iucn_who/less/theme/general.less
+++ b/docroot/themes/iucn_who/less/theme/general.less
@@ -28,7 +28,7 @@ body:not(.show-focus-outlines) {
   display: flex;
   flex: 1 0 auto;
   flex-direction: column;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 @media (max-width: @grid-float-breakpoint-max) {
   .holygrail,
